# biusrv

./: .gitignore  Cargo.toml  LICENSE  README.md
components/: docker.toml  nginx.toml
example-scrpts/: backup.toml  monitoring.toml  nginx.toml  nodejs.toml  redis.toml  security.toml
examples/: README.md  config.toml  config.yaml
examples/scripts/: monitoring.yaml  mysql.toml  mysql.yaml  nginx.toml  nginx.yaml  nodejs.yaml  redis.yaml
src/: cli.rs  component.rs  compose.rs  config.rs  fail2ban.rs  firewall.rs  init.rs  lib.rs  main.rs  script.rs  ssh.rs  transfer.rs  utils.rs
src/cli/: common.rs  executor.rs  init.rs  manage.rs  multishell.rs
src/cli/manage/: component.rs  exec.rs  firewall.rs  script.rs  transfer.rs
src/component/: config.rs  manager.rs
