[package]
name = "biusrv"
version = "0.1.0"
edition = "2021"

[dependencies]
russh = "0.54.3"
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0"
crossterm = "0.29.0"
log = "0.4.28"
env_logger = "0.11.8"
clap = { version = "4.5.47", features = ["derive"] }
rpassword = "7.4.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.19"
dirs = "5.0"
shell-words = "1.1.0"
base64 = "0.22"
russh-sftp = "2.1.1"
indicatif = "0.18.0"
serde_yaml = "0.9.34"
